# cimdraw

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  cimdraw.qrc
config/: lz_data.example.json
docs/: README.md  当前状态.md
docs/CIM标准知识体系/: 01-CIM是什么与标准地图.md  02-CIM建模思想与元模型.md  03-CIM核心对象与电网语义.md  04-Profile机制与RDF交换.md  05-连接性拓扑与状态.md  06-图形布局量测与运行数据.md  07-CGMES边界差异与工程实践.md  08-常见误区术语表与学习路径.md  README.md
docs/design/: CIM-BehaviorProjection框架设计.md  CIM-GraphicProjection框架设计.md  CIM-PowerSystemModel总体架构设计.md  CIM-SemanticProjection框架设计.md  CIM-TopologyProjection框架设计.md  CIM产品迭代与阶段目标设计.md  CIM分阶段ToDo与验收清单.md  CIM开发ToDo与测试方案.md  CIM开源元数据复用设计.md  CIM异步电机图元补充说明.md  CIM拓扑分组与正交布置设计.md  CIM标准图元缺口与补齐设计.md  CIM标准图元补齐ToDo与测试验收方案.md  CIM标准图元补齐执行ToDoList.md  CIM标准模型与工程图元对应表.md  CIM避雷器图元补充说明.md  README.md
src/: CimdrawAppBootstrap.cpp  CimdrawAppBootstrap.h  CimdrawAppConfig.cpp  CimdrawAppConfig.h  CimdrawAttributeManager.cpp  CimdrawAttributeManager.h  CimdrawCenterWidget.cpp  CimdrawCenterWidget.h  CimdrawConnectConfig.h  CimdrawCursorManager.cpp  CimdrawCursorManager.h  CimdrawCursorTypeRegistry.cpp  CimdrawCursorTypeRegistry.h  CimdrawFile.cpp  CimdrawFile.h  CimdrawFrame.cpp  CimdrawFrame.h  CimdrawImageManager.cpp  CimdrawImageManager.h  CimdrawImageWidget.cpp  CimdrawImageWidget.h  CimdrawItemConfig.h  CimdrawItemController.cpp  CimdrawItemController.h  CimdrawListWidget.cpp  CimdrawListWidget.h  CimdrawListWidgetItem.cpp  CimdrawListWidgetItem.h  CimdrawMimeData.cpp  CimdrawMimeData.h  CimdrawScene.cpp  CimdrawScene.h  CimdrawToolBoxManager.cpp  CimdrawToolBoxManager.h  CimdrawView.cpp  CimdrawView.h  CimdrawViewConfig.h  FrameActionBuilder.cpp  FrameActionBuilder.h  FrameActionStateController.cpp  (+92 more)
src/algorithm/: CimdrawAStar.cpp  CimdrawAStar.h  CimdrawConnectorAlgorithm.cpp  CimdrawConnectorAlgorithm.h  CimdrawSnowflakeId.cpp  CimdrawSnowflakeId.h  CimdrawVisibilityGraph.cpp  CimdrawVisibilityGraph.h  LzAStar.cpp  LzAStar.h  LzConnectorAlgorithm.cpp  LzConnectorAlgorithm.h  LzSnowflakeId.cpp  LzSnowflakeId.h  LzVisibilityGraph.cpp  LzVisibilityGraph.h
src/command/: CimdrawAddCommand.cpp  CimdrawAddCommand.h  CimdrawBottomAliginCommand.cpp  CimdrawBottomAliginCommand.h  CimdrawControlCommand.cpp  CimdrawControlCommand.h  CimdrawCutCommand.cpp  CimdrawCutCommand.h  CimdrawDeleteCommand.cpp  CimdrawDeleteCommand.h  CimdrawEditConnectLinePathCommand.cpp  CimdrawEditConnectLinePathCommand.h  CimdrawGroupCommand.cpp  CimdrawGroupCommand.h  CimdrawHorizontalDistributionCommand.cpp  CimdrawHorizontalDistributionCommand.h  CimdrawHorizontallAlignCommand.cpp  CimdrawHorizontallAlignCommand.h  CimdrawLayoutCommandUtils.h  CimdrawLeftAlignCommand.cpp  CimdrawLeftAlignCommand.h  CimdrawMoveCommand.cpp  CimdrawMoveCommand.h  CimdrawPasteCommand.cpp  CimdrawPasteCommand.h  CimdrawReSizeCommand.h  CimdrawResizeCommand.cpp  CimdrawRightAlignCommand.cpp  CimdrawRightAlignCommand.h  CimdrawRotateCommand.cpp  CimdrawRotateCommand.h  CimdrawSameHeightCommand.cpp  CimdrawSameHeightCommand.h  CimdrawSameSizeCommand.cpp  CimdrawSameSizeCommand.h  CimdrawSameWidthCommand.cpp  CimdrawSameWidthCommand.h  CimdrawShortcutDownCommand.cpp  CimdrawShortcutDownCommand.h  CimdrawShortcutLeftCommand.cpp  (+70 more)
src/datamodule/: CimdrawDataSourceBuilder.cpp  CimdrawDataSourceBuilder.h  CimdrawDataSourceConfigLoader.cpp  CimdrawDataSourceConfigLoader.h  CimdrawDataSourceFactory.cpp  CimdrawDataSourceFactory.h  CimdrawDataSourceManager.cpp  CimdrawDataSourceManager.h  CimdrawDataSourceRuntimeController.cpp  CimdrawDataSourceRuntimeController.h  CimdrawIDataSource.cpp  CimdrawIDataSource.h  CimdrawSceneResolver.h  LzDataSourceBuilder.cpp  LzDataSourceBuilder.h  LzDataSourceConfigLoader.cpp  LzDataSourceConfigLoader.h  LzDataSourceFactory.cpp  LzDataSourceFactory.h  LzDataSourceManager.cpp  LzDataSourceManager.h  LzDataSourceRuntimeController.cpp  LzDataSourceRuntimeController.h  LzIDataSource.cpp  LzIDataSource.h  LzSceneResolver.h
src/item/: CimdrawArc.cpp  CimdrawArc.h  CimdrawBezier.cpp  CimdrawBezier.h  CimdrawBraceCallout.cpp  CimdrawBraceCallout.h  CimdrawConnectLine.cpp  CimdrawConnectLine.h  CimdrawConnectPoint.cpp  CimdrawConnectPoint.h  CimdrawConnectionParameters.h  CimdrawEllipse.cpp  CimdrawEllipse.h  CimdrawGroup.cpp  CimdrawGroup.h  CimdrawHandle.cpp  CimdrawHandle.h  CimdrawHyperLink.cpp  CimdrawHyperLink.h  CimdrawImage.cpp  CimdrawImage.h  CimdrawItem.cpp  CimdrawItem.h  CimdrawLine.cpp  CimdrawLine.h  CimdrawObjectCreator.h  CimdrawObjectFactory.cpp  CimdrawObjectFactory.h  CimdrawPolygon.cpp  CimdrawPolygon.h  CimdrawPolyline.cpp  CimdrawPolyline.h  CimdrawRect.cpp  CimdrawRect.h  CimdrawRoundRect.cpp  CimdrawRoundRect.h  CimdrawText.cpp  CimdrawText.h  CimdrawToolboxIconPaint.h  CimdrawTopologyNodeItem.cpp  (+43 more)
src/node/: CimdrawUtils.cpp  CimdrawUtils.h  LzUtils.cpp  LzUtils.h
src/scene/: CimdrawSceneConnectorLayoutController.cpp  CimdrawSceneConnectorLayoutController.h  CimdrawSceneContextMenuController.cpp  CimdrawSceneContextMenuController.h  CimdrawSceneDeferredUpdateController.cpp  CimdrawSceneDeferredUpdateController.h  CimdrawSceneDocumentController.cpp  CimdrawSceneDocumentController.h  CimdrawSceneDocumentSlotWorkbenchController.cpp  CimdrawSceneDocumentSlotWorkbenchController.h  CimdrawSceneDocumentWorkbenchController.cpp  CimdrawSceneDocumentWorkbenchController.h  CimdrawSceneEditController.cpp  CimdrawSceneEditController.h  CimdrawSceneEditSlotWorkbenchController.cpp  CimdrawSceneEditSlotWorkbenchController.h  CimdrawSceneEditWorkbenchController.cpp  (+83 more)
tests/: README.md  test_cim_graphics.cpp  test_cim_graphics.h  test_cim_graphics_main.cpp  test_cim_importer.cpp  test_cim_importer.h  test_cim_importer_main.cpp  test_cim_model.cpp  test_cim_model.h  test_cim_model_main.cpp  test_cim_ui.cpp  test_cim_ui.h  test_cim_ui_main.cpp  test_cimdraw_topology.cpp  test_cimdraw_topology.h  test_cimdraw_topology_main.cpp  test_cimdraw_topology_only_main.cpp  test_power_topology.cpp  test_power_topology.h  test_power_topology_main.cpp  test_sync_cim_metadata.py
tools/: sync_cim_metadata.py
(+468 files in other folders)
